--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
-sudo: false
-dist: trusty
+dist: xenial
 language: node_js
-addons:
-  chrome: stable
-  firefox: latest
+# node version is specified using the .nvmrc file
+cache: npm
 before_install:
   - npm install -g greenkeeper-lockfile@1
 before_script:
   - greenkeeper-lockfile-update
-  - export CHROME_BIN=/usr/bin/google-chrome
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-after_script: greenkeeper-lockfile-upload
+after_script:
+  - greenkeeper-lockfile-upload
+addons:
+  firefox: latest
+  chrome: stable
+services:
+  - xvfb
