--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "https://github.com/videojs/mux.js.git"
   },
-  "main": "./lib/index.js",
+  "main": "./cjs/index.js",
   "module": "es/index.js",
   "browser": "dist/mux.js.js",
   "generator-videojs-plugin": {
