--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "build:js": "rollup -c scripts/rollup.config.js",
     "clean": "shx rm -rf ./dist ./test/dist ./cjs ./es && shx mkdir -p ./dist ./test/dist ./cjs ./es",
     "docs": "npm-run-all docs:*",
-    "docs:api": "jsdoc src -g plugins/markdown -r -d docs/api",
     "docs:toc": "doctoc --notitle README.md",
     "lint": ": vjsstandard",
     "server": "karma start scripts/karma.conf.js --singleRun=false --auto-watch",
@@ -86,31 +85,22 @@
     }
   },
   "lint-staged": {
-    "*.js": [
-      "vjsstandard --fix",
-      "git add"
-    ],
-    "README.md": [
-      "doctoc --notitle",
-      "git add"
-    ]
+    "*.js": "vjsstandard --fix",
+    "README.md": "doctoc --notitle"
   },
   "dependencies": {
-    "global": "^4.4.0",
-    "video.js": "^6 || ^7"
+    "@babel/runtime": "^7.11.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
-    "@babel/runtime": "^7.11.2",
     "@videojs/babel-config": "^0.2.0",
-    "@videojs/generator-helpers": "~1.2.0",
-    "jsdoc": "BrandonOCasey/jsdoc#feat/plugin-from-cli",
-    "karma": "^4.0.0",
+    "@videojs/generator-helpers": "~2.0.1",
+    "karma": "^5.0.0",
     "rollup": "^2.28.2",
     "sinon": "^9.1.0",
     "videojs-generate-karma-config": "~6.0.0",
-    "videojs-generate-rollup-config": "https://github.com/videojs/videojs-generate-rollup-config#fix/minifier-babel",
-    "videojs-generator-verify": "https://github.com/videojs/videojs-generator-verify#feat/library",
+    "videojs-generate-rollup-config": "~6.0.2",
+    "videojs-generator-verify": "~3.0.1",
     "videojs-standard": "^8.0.4"
   }
 }
