--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,6 @@
 {
+  "parser": "babel-eslint",
+
   "env": {
     "browser": true,
     "node": true
@@ -52,7 +54,7 @@
     "max-statements": 0,
     "new-cap": [2, {"newIsCap": true, "capIsNew": false}],
     "new-parens": 2,
-    "newline-after-var": 1,
+    "newline-after-var": 0,
     "no-alert": 2,
     "no-array-constructor": 2,
     "no-bitwise": 0,
