--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "dist/"
   ],
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
     "browserify": "^12.0.1",
     "browserify-shim": "^3.8.12",
     "bundle-collapser": "^1.2.1",
