--- a/package.json
+++ b/package.json
@@ -8,26 +8,12 @@
   },
   "main": "./lib/index.js",
   "scripts": {
-    "netlify": "node scripts/netlify.js",
-    "test": "npm run lint && karma start test/karma/karma.conf.js",
-    "start": "npm-run-all -p watch serve",
-    "serve": "node scripts/server.js",
-    "watch": "npm run mkdirs && npm-run-all -p watch:*",
-    "watch:js": "watchify -s muxjs -p bundle-collapser/plugin lib/index.js -v -o dist/mux.js",
-    "watch:test": "watchify test/*.test.js -g browserify-shim -p bundle-collapser/plugin -v -o dist-test/mux.js",
-    "mkdirs": "mkdir -p dist dist-test",
-    "build": "npm run mkdirs && npm-run-all -p build:* && npm run uglify",
-    "build:mp4": "browserify -s muxjs lib/mp4/index.js -p bundle-collapser/plugin -o dist/mux-mp4.js",
-    "build:flv": "browserify -s muxjs lib/flv/index.js -p bundle-collapser/plugin -o dist/mux-flv.js",
-    "build:js": "browserify -s muxjs lib/index.js -p bundle-collapser/plugin -o dist/mux.js",
-    "build:test": "browserify test/*.test.js -g browserify-shim -p bundle-collapser/plugin -o dist-test/mux.js",
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc && copyfiles package.json README.md LICENSE dist",
+    "publish": "cd dist && npm publish",
+    "release": "npm run build && npm run publish",
     "lint": "eslint \"lib/**/*.js\" \"test/**/*.js\"",
-    "uglify": "npm-run-all -p uglify:*",
-    "uglify:mp4": "uglifyjs --mangle --compress -o dist/mux-mp4.min.js dist/mux-mp4.js && node scripts/insert-license-header.js dist/mux-mp4.min.js",
-    "uglify:flv": "uglifyjs --mangle --compress -o dist/mux-flv.min.js dist/mux-flv.js && node scripts/insert-license-header.js dist/mux-flv.min.js",
-    "uglify:js": "uglifyjs --mangle --compress -o dist/mux.min.js dist/mux.js && node scripts/insert-license-header.js dist/mux.min.js",
-    "clean": "rm -rf dist dist-test",
-    "prepublish": "not-in-install && npm run build || in-install"
+    "test": "npm run lint && karma start test/karma/karma.conf.js"
   },
   "browser": "./lib/index.js",
   "keywords": [
@@ -42,9 +28,6 @@
     "aac",
     "h264"
   ],
-  "browserify-shim": {
-    "qunit": "global:QUnit"
-  },
   "author": "Brightcove",
   "license": "Apache-2.0",
   "eslintConfig": {
@@ -61,25 +44,9 @@
   ],
   "devDependencies": {
     "babel-eslint": "^6.1.2",
-    "browserify": "^12.0.1",
-    "browserify-shim": "^3.8.12",
-    "bundle-collapser": "^1.2.1",
+    "copyfiles": "^2.4.1",
     "eslint": "^2.10.2",
-    "express": "^4.13.3",
-    "in-publish": "^2.0.0",
-    "jshint": "^2.9.1-rc2",
-    "karma": "^0.13.9",
-    "karma-browserify": "^4.4.2",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-qunit": "^0.1.5",
-    "npm-run-all": "^4.1.5",
-    "portscanner": "^1.0.0",
-    "qunitjs": "^1.0.0",
-    "serve-static": "^1.10.0",
-    "shelljs": "^0.8.3",
-    "uglify-js": "^2.6.2",
-    "watchify": "^3.6.1",
-    "webworkify": "^1.0.2"
+    "rimraf": "^2.6.3",
+    "typescript": "^4.1.2"
   }
 }
