--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,11 @@
     "declaration": true,
     // This compiler run should
     // only output d.ts files
-    "emitDeclarationOnly": true,
+    "emitDeclarationOnly": false,
     // Types should go into this directory.
     // Removing this would place the .d.ts files
     // next to the .js files
-    "outDir": "types",
+    "outDir": "dist",
     // allow default imports
     "allowSyntheticDefaultImports": true,
   },
